# scald

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.actor  Makefile  README.md  index.html  justfile  mkdocs.yaml  objects.inv  pyproject.toml
.github/: pull_request_template.md
actor-critic/: index.html
api/: index.html
architecture/: index.html
docs/: actor-critic.md  api.md  architecture.md  index.md  installation.md  mcp-servers.md  quickstart.md
docs/usage/: api.md  cli.md  configuration.md
examples/: actor_env_test.py  actor_usage.py  basic_usage.py  basic_usage_dataframes.py  basic_usage_env.py  basic_usage_paths.py  docker_test.py  kaggle_s5e12.py
examples/benchmark/: README.md  amlb.py  amlb_small_set.yaml  run_amlb.py
installation/: index.html
mcp-servers/: index.html
quickstart/: index.html
search/: search_index.json
src/scald/: __init__.py  cli.py  graph.py  main.py  memory.py  models.py
src/scald/agents/: actor.py  base.py  context.py  critic.py
src/scald/common/: cost.py  logger.py  mixins.py  np_parsers.py  paths.py  report.py  session.py  types.py  workspace.py
src/scald/environment/: __init__.py  actor_runner.py  docker_runner.py
src/scald/mcp/: registry.py  utils.py
src/scald/mcp/servers/data_analysis/: server.py
src/scald/mcp/servers/data_load/: server.py
src/scald/mcp/servers/data_loading/: server.py
src/scald/mcp/servers/data_preview/: server.py
src/scald/mcp/servers/data_processing/: server.py
src/scald/mcp/servers/file_operations/: server.py
src/scald/mcp/servers/machine_learning/: server.py
src/scald/memory/: __init__.py  actor_memory.py  base.py  critic_memory.py  manager.py  types.py
tests/: __init__.py  test_cli.py
tests/common/: test_cost.py  test_logger.py  test_mixins.py  test_paths.py  test_session.py  test_workspace.py
tests/environment/: test_actor_runner.py  test_docker_runner.py
tests/mcp/: test_registry.py  test_utils.py
tests/memory/: test_memory_manager.py  test_memory_manager_contract.py
usage/api/: index.html
usage/cli/: index.html
usage/configuration/: index.html
