[project]
name = "scald"
version = "0.1.0"
description = "Scalable Collaborative Agents for Data Science"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dmitry Gilemkhanov", email = "dima.rize@yandex.ru"}
]
license = {text = "MIT"}

[project.scripts]
scald = "scald.cli:main"

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.0.0",
    "scikit-learn>=1.3.0",
    "fastmcp>=0.1.0",
    "loguru>=0.7.0",
    "polars>=0.20.0",
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "optuna>=3.0.0",
    "docker>=7.0.0",
    "chromadb>=0.5.0",
    "genai-prices>=0.0.35",
    "python-toon>=0.1.2",
]
[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "coverage-badge>=1.1.2",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
benchmarks = [
    "openml>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scald"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q -W ignore --cov=src/scald --cov-report=term-missing --cov-report=html --cov-report=json"

[tool.coverage.run]
source = ["src/scald"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
