[project]
name = "scald"
version = "0.1.3"
description = "Scalable Collaborative Agents for Data Science"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dmitry Gilemkhanov", email = "dima.rize@yandex.ru"}
]
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.2.1",
    "python-toon>=0.1.3",
    "genai-prices>=0.0.35",
    "chromadb>=1.3.2",
    "docker>=7.1.0",
    "optuna>=4.5.0",
    "xgboost>=3.1.1",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8",
    "polars>=1.35.1",
    "fastmcp>=2.13.0.2",
    "scikit-learn>=1.7.2",
    "pydantic-ai>=1.10.0",
    "pydantic>=2.12.3",
    "pydantic-evals>=1.10.0",
    "logly>=0.1.6",
]

[project.scripts]
scald = "scald.cli:main"

[dependency-groups]
dev = [
    "prek>=0.2.18",
    "ty>=0.0.1a27",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
benchmarks = [
    "openml>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scald"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/scald"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
